idf_component_register(
    SRCS
        gamepad.c 
        i_main.c 
        i_network.c 
        i_sound.c 
        i_system.c 
        i_video.c 
        psxcontroller.c 
        spi_lcd.c
    INCLUDE_DIRS
        .
        ./include
    REQUIRES
        prboom
        driver
        esp_partition
        freertos
        spi_flash
        heap
        xtensa
)

target_compile_options(${COMPONENT_LIB} PRIVATE
    -Wno-error=maybe-uninitialized
    -Wno-error=misleading-indentation
    -Wno-error=stringop-truncation
    -Wno-error=char-subscripts
    -Wno-error=unused-const-variable=
    -Wno-error=unused-value
    -Wno-error=pointer-sign
    -Wno-error=duplicate-decl-specifier
    -Wno-error=unused-but-set-parameter
    -Wno-error=parentheses
    -Wno-error=nonnull
    -Wno-error=dangling-else
    -Wno-error=sizeof-pointer-div
    -Wno-error=format-overflow=
    -Wno-error=implicit-function-declaration
)